<resources>
    <string name="app_name">Labour Mistri</string>
    <string name="update">UPDATE</string>
    <string name="set_rate_to_id_colon">SET RATE TO ID:</string>
    <string name="please_turn_on_your_internet">Please Turn On Your Internet</string>
    <string name="choose_gmail_app">Choose Gmail App</string>
    <string name="please_help">Please Help</string>
    <string name="database_file">Database File</string>
    <string name="backup">Backup</string>
    <string name="single_pdf_file_backup">SINGLE PDF FILE BACKUP</string>
    <string name="single_text_file_backup">SINGLE TEXT FILE BACKUP</string>
    <string name="single_excel_file_backup">SINGLE EXCEL FILE BACKUP</string>
    <string name="backup_your_data">BACKUP YOUR DATA</string>
    <string name="_3_ways_for_backup">3 WAYS FOR BACKUP</string>
    <string name="you_havent_backedup_your_data_today">You Haven\'t Backed Up Your Data Today.</string>
    <string name="backup_now_suggestion">We Recommend Backing Up Your Database File And Store It On Google Drive Every Day. So That, If Your Phone Is Lost Or App Is Uninstalled, You Can Easily Restore Your Data.</string>
    <string name="pdf">PDF</string>
    <string name="text">TEXT</string>
    <string name="excel">EXCEL</string>
    <string name="active_skill_m_l_g">Active Skill M L G</string>
    <string name="inactive_skill_m">InActive Skill M</string>
    <string name="inactive_skill_l">InActive Skill L</string>
    <string name="inactive_skill_g">InActive Skill G</string>
    <string name="select_file_type">Select File Type</string>
    <string name="single_file">Single File</string>
    <string name="newline_newline_this_file_is_useful_to_see_your_data_only">\n\nThis File is Useful To See Your Data Only</string>
    <string name="you_can_backup_your_aa_data_into_smaller_files_separately">You Can Backup Your All Data (Except Image And Audio Data) Into Smaller Files Separately.</string>
    <string name="you_can_backup_your_all_data_in_a_single_file">You Can Backup Your All Data (Except Image And Audio Data) In a Single File.\n\nIt Will Contain\nActive Skill M L G\nInActive Skill M\nInActive Skill L\nInActive Skill G</string>
    <string name="you_can_backup_your_database">You Can Backup Your Database File.\n\nThis File is Useful To Restore All Data (Except Image And Audio Data) When You Lose Your Mobile or Uninstall This App.</string>
    <string name="_3_backup_each_file">3 Backup Each File</string>
    <string name="_2_single_file_backup">2 Single File Backup</string>
    <string name="_1_database_backup">1 DataBase Backup</string>
    <string name="backup_saved_in_download_folder">BACKUP SAVED IN DOWNLOAD FOLDER</string>
    <string name="last_backup_colon_hyphen">Last Backup: -</string>
    <string name="backup_file_setting">BACKUP FILE SETTING</string>
    <string name="would_you_like_to_share_or_download_backup_file">Would You Like To Share or Download Backup File?</string>
    <string name="share_recommended">SHARE (to Google Drive Recommended)</string>
    <string name="account_number_already_exists">ACCOUNT NUMBER ALREADY EXISTS. PLEASE ENTER DIFFERENT NUMBER</string>
    <string name="aadhaar_number_already_exists">AADHAAR NUMBER ALREADY EXISTS. PLEASE ENTER DIFFERENT NUMBER</string>
    <string name="phone_number_already_exists">PHONE NUMBER ALREADY EXISTS. PLEASE ENTER DIFFERENT NUMBER</string>
    <string name="please_add_father_name_to_person_name">PLEASE ADD FATHER NAME TO PERSON NAME</string>
    <string name="should_be_12_digits">SHOULD BE 12 DIGITS</string>
    <string name="should_be_11_digits">SHOULD BE 11 DIGITS</string>
    <string name="should_be_10_digits">SHOULD BE 10 DIGITS</string>
    <string name="wrong_input">WRONG INPUT</string>
    <string name="please_select_skill">PLEASE SELECT SKILL</string>
    <string name="please_enter_name">"PLEASE ENTER NAME"</string>
    <string name="name_registration">NAME REGISTRATION</string>
    <string name="enter_name_star">NAME *</string>
    <string name="skill_star">SKILL *</string>
    <string name="skill">SKILL</string>
    <string name="ac_number">A/C NUMBER</string>
    <string name="enter_aadhaar_card_number">AADHAAR CARD NUMBER</string>
    <string name="enter_phone_number">ACTIVE PHONE NUMBER 1</string>
    <string name="phone_number_2">PHONE NUMBER 2</string>
    <string name="skilled_in">TYPE</string>
    <string name="remarks_only_500_letters">REMARKS Only 250 letters</string>
    <string name="bank_name">BANK NAME</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="what_is_calculated_invoice_question_mark">WHAT IS CALCULATED INVOICES?</string>
    <string name="insert_data">ADD</string>
    <string name="account_holder_name">A/C HOLDER NAME</string>
    <string name="business_details">BUSINESS DETAILS</string>
    <string name="business_name">BUSINESS NAME</string>
    <string name="whatsapp_number">WHATSAPP NUMBER</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="email">EMAIL</string>
    <string name="gstin">GST NUMBER</string>
    <string name="gst">GST</string>
    <string name="address">ADDRESS</string>
    <string name="calculated_invoice_files">CALCULATED INVOICE FILES</string>
    <string name="backup_calculated_invoice_and_delete_invoice_to_free_up_space">BACKUP CALCULATED INVOICE AND DELETE INVOICE TO FREE UP SPACE"</string>
    <string name="no_calculated_invoice_available">NO CALCULATED INVOICE AVAILABLE</string>
    <string name="calculated_invoice">CALCULATED INVOICE</string>
    <string name="backup_and_freeup_space_tips">BACKUP AND FREE UP SPACE TIPS</string>
    <string name="calculated_invoice_backup_hint">How To Back Up Calculated Invoice?\n\n1. Long-press On Any File.\n\n2. Select All The Files You Want To Back Up, Then Share Them To Google Drive Or Any Other Storage Location.\n\nHow To Free Up Space?\n\nAfter Taking Back Up, Delete All The Selected Files By Clicking The Delete Icon.</string>
    <string name="calculate_invoice_means">Calculated Invoice File Contain All Details Of Wages , Deposit , Work Days.\n\nIt Is Same As PDF Invoice File Which You See After Doing Calculation Of a Person.</string>
    <string name="last_invoice2">LAST INVOICE2</string>
    <string name="last_invoice1">LAST INVOICE1</string>
    <string name="running_invoice">RUNNING INVOICE</string>
    <string name="download">DOWNLOAD</string>
    <string name="share_invoice">SHARE INVOICE</string>
    <string name="enter_amount">ENTER AMOUNT</string>
    <string name="amount_rs">AMOUNT Rs.</string>
    <string name="remarks">REMARKS</string>
    <string name="message_copied">MESSAGE COPIED</string>
    <string name="share">SHARE</string>
    <string name="send_summary_to_contact">SEND SUMMARY TO CONTACT</string>
    <string name="total_no_of_deposit_entries">*TOTAL N0. OF DEPOSIT ENTRIES:</string>
    <string name="total_no_of_wages_entries">*TOTAL N0. OF WAGES ENTRIES:</string>
    <string name="summary">SUMMARY</string>
    <string name="share_message_using">SHARE MESSAGE USING</string>
    <string name="please_wait_a_few_seconds">PLEASE WAIT A FEW SECONDS</string>
    <string name="share_image_using">SHARE IMAGE USING</string>
    <string name="update_deposit_amount">UPDATE DEPOSIT AMOUNT=</string>
    <string name="long_press_to_update">LONG PRESS TO UPDATE</string>
    <string name="play">PLAY</string>
    <string name="recording_started">RECORDING STARTED</string>
    <string name="again_tab_on_mic_to_start_recording">AGAIN TAB ON MIC TO START RECORDING</string>
    <string name="enable_audio_permission">ENABLE AUDIO PERMISSION</string>
    <string name="tab_on_mic_to_start_recording">TAB ON MIC TO START RECORDING</string>
    <string name="hyphen_entered">-ENTERED]</string>
    <string name="deposited_with_hyphen">[DEPOSITED]-</string>
    <string name="deposited">[DEPOSITED]</string>
    <string name="audio_playing">AUDIO PLAYING</string>
    <string name="hyphen_edited">-EDITED]</string>
    <string name="previous_details_were_colon">PREVIOUS DETAILS WERE:</string>
    <string name="serch_view_hint">Enter Ac(4),Aadhaar(5),Phone(6),ID Followed By Any One Letter,Name</string>
    <string name="by_name_phone_id_ac_aadhaar">By Name, Phone, ID, A/C, Aadhaar</string>
    <string name="searching_tips">SEARCHING TIPS</string>
    <string name="invoice">INVOICE</string>
    <string name="searching_tips_info">Bank Account - Enter Last 4 Digits or Full Number.\n\nAadhaar - Enter Last 5 Digits or Full Number.\n\nPhone - Enter Last 6 Digits or Full Number.\n\nName - Enter Correct Name.\n\nID - Enter Any One Letter then ID or Enter ID Then Any One Letter.</string>
    <string name="last_6_digits_phone_number">LAST 6 DIGITS PHONE NUMBER</string>
    <string name="last_5_digits_aadhaar_number">LAST 5 DIGITS AADHAAR NUMBER</string>
    <string name="last_4_digits_back_account_number">LAST 4 DIGITS BANK ACCOUNT NUMBER</string>
    <string name="updated_successfully">UPDATED SUCCESSFULLY</string>
    <string name="save">SAVE</string>
    <string name="no_audio">NO AUDIO</string>
    <string name="ok">OK</string>
    <string name="no_remarks">NO REMARKS</string>
    <string name="you_are_updating">YOU ARE UPDATING</string>
    <string name="audio_not_found_may_be_deleted">AUDIO NOT FOUND MAY BE DELETED</string>
    <string name="failed_to_update">FAILED TO UPDATE</string>
    <string name="correct_the_data_or_cancel_and_enter_again">CORRECT THE DATA OR CANCEL AND ENTER AGAIN</string>
    <string name="updated_payment">UPDATED PAYMENT:</string>
    <string name="updated_amount_received">UPDATED AMOUNT RECEIVED:</string>
    <string name="calculated">CALCULATED</string>
    <string name="choose_when_a_labour_or_mistri_should_become_inactive_automatically_if_not_worked_for">Choose When a Labour/Mistri Should Become Inactive Automatically If Not Worked For</string>
    <string name="_2_weeks">2 WEEKS</string>
    <string name="_3_weeks">3 WEEKS</string>
    <string name="_1_month">1 MONTH</string>
    <string name="sharing_to_active_phone_number_enabled">SHARING TO ACTIVE PHONE NUMBER ENABLED</string>
    <string name="sharing_to_whatsapp_enabled">SHARING TO WHATSAPP ENABLED</string>
    <string name="total_amount_received">TOTAL AMOUNT RECEIVED</string>
    <string name="total_payment">TOTAL PAYMENT</string>
    <string name="generate_history_pdf">GENERATE HISTORY PDF</string>
    <string name="start_date">START DATE</string>
    <string name="end_date">END DATE</string>
    <string name="share_pdf">SHARE PDF</string>
    <string name="ensure_the_start_date_is_before_the_end_date">ENSURE THE START DATE IS BEFORE THE END DATE</string>
    <string name="enter_date">ENTER DATE</string>
    <string name="rate">RATE</string>
    <string name="backup_manually">Backup Manually</string>
    <string name="inactive_setting">InActive Setting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition">Terms And Condition</string>
    <string name="cancel">CANCEL</string>
    <string name="m_mason">M (MASON)</string>
    <string name="l_labour">L (LABOUR)</string>
    <string name="g_women">G (WOMEN)</string>
    <string name="i_m_a_new_user">I\'M A NEW USER</string>
    <string name="have_you_backed_up_data_before">Have You Backed up Data Before?</string>
    <string name="yes_then_find_your_backup_file_to_restore">Yes, Then Find Your Backup File To Restore</string>
    <string name="find_backup">FIND BACKUP</string>
    <string name="set_default_rate">SET DEFAULT RATE</string>
    <string name="default_rate_is_set_automatically_when_you_register_new_labour_or_mistri_later_you_can_change">Default Rate Is Set Automatically When You Register Or Add New Labour/Mistri. Later You Can Change.</string>
    <string name="default_rate_setting">Default Rate Setting</string>
</resources>