<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <group android:checkableBehavior="single">-->
<!--        <item android:title="@string/backup_manually">-->
<!--      <menu>-->
<!--    <item-->
<!--        android:id="@+id/backup_active_mlg"-->
<!--        android:icon="@drawable/baseline_share_24"-->
<!--        android:title="@string/backup_active_skill_m_l_g"/>-->

<!--    <item android:id="@+id/backup_inactive_m"-->
<!--        android:icon="@drawable/baseline_share_24"-->
<!--        android:title="@string/backup_inactive_skill_m"/>-->

<!--    <item android:id="@+id/backup_inactive_l"-->
<!--        android:icon="@drawable/baseline_share_24"-->
<!--        android:title="@string/backup_inactive_skill_l"/>-->

<!--    <item android:id="@+id/backup_inactive_g"-->
<!--        android:icon="@drawable/baseline_share_24"-->
<!--        android:title="@string/backup_inactive_skill_g"/>-->
<!--      </menu>-->
<!--        </item>-->
<!--  </group>-->

    <item android:id="@+id/backup_manually"
        android:icon="@drawable/baseline_cloud_upload_24"
        android:title="@string/backup_manually"/>
    <!--        android:icon="@drawable/baseline_settings_suggest_24"-->
    <item android:id="@+id/inactive_setting"
        android:icon="@drawable/ic_sharp_supervisor_account_24"
         android:title="@string/inactive_setting"/>

    <item android:id="@+id/default_rate_setting"
        android:icon="@drawable/baseline_rup"
        android:title="@string/default_rate_setting"/>

    <item android:id="@+id/language"
        android:icon="@drawable/baseline_translate_24"
        android:title="Language"/>

    <item android:id="@+id/privacy_policy"
        android:icon="@drawable/baseline_lock_24"
        android:title="@string/privacy_policy"/>

    <item android:id="@+id/terms_and_condition"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/terms_and_condition"/>
    <item android:id="@+id/about_us"
        android:title="About Us"/>

</menu>