<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    tools:context=".activity.SignInActivityLandingPage">
    <LinearLayout
         android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher_round"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"/>
    <Button
        android:id="@+id/new_user_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/i_m_a_new_user"
        android:textColor="@color/white"
        android:layout_marginBottom="55dp"
        android:background="@drawable/green_color_bg"
        android:foreground="?android:attr/selectableItemBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_you_backed_up_data_before"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes_then_find_your_backup_file_to_restore"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/find_backup_button"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/find_backup"
        android:background="@drawable/dark_blue_buttonbg"
        android:textStyle="bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginBottom="170dp"/>
    </LinearLayout>
</ScrollView>