<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/set_default_rate"
        android:paddingTop="3dp"
        android:background="@color/purple_700"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"/>
    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/hardcoded_p1_tv_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="@string/default_rate_is_set_automatically_when_you_register_new_labour_or_mistri_later_you_can_change"
        android:textColor="@color/black"
        android:textSize="15sp"/>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_mason"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="50dp"
        android:textSize="13sp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/light_gray_color_bg"
        android:textStyle="bold"
        android:singleLine="true"
        android:maxLength="5"
        android:hint="@string/rate"
        android:paddingStart="5dp"
        android:textColor="@color/purple_700"
        android:textSize="15dp"
        android:inputType="number"

        android:digits="0123456789"
        android:id="@+id/default_mestre_rate_et"
        android:foreground="?android:attr/selectableItemBackground">
    </EditText>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l_labour"
        android:layout_marginStart="52dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginEnd="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/light_gray_color_bg"
        android:textStyle="bold"
        android:singleLine="true"
        android:maxLength="5"
        android:paddingStart="5dp"
        android:textColor="@color/purple_700"
        android:textSize="15dp"
        android:inputType="number"
        android:hint="@string/rate"
        android:digits="0123456789"
        android:id="@+id/default_labour_rate_et"
        android:foreground="?android:attr/selectableItemBackground">
    </EditText>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g_women"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="50dp"
        android:textSize="13sp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/light_gray_color_bg"
        android:textStyle="bold"
        android:singleLine="true"
        android:maxLength="5"
        android:paddingStart="5dp"
        android:textColor="@color/purple_700"
        android:textSize="15dp"
        android:inputType="number"
        android:hint="@string/rate"
        android:digits="0123456789"
        android:id="@+id/default_women_rate_et"
        android:foreground="?android:attr/selectableItemBackground">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="4dp"
        android:orientation="horizontal"
        android:weightSum="6">
        <Button
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/cancel"
            android:textSize="15dp"
            android:textColor="#FF0000"
            android:textAlignment="center"
            android:background="@drawable/graycolor_bg"
            android:id="@+id/default_cancel_rate_setting"
            android:foreground="?android:attr/selectableItemBackground"/>
        <Button
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/green_color_bg"
            android:id="@+id/default_save_rate_setting"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>

</LinearLayout>