<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D6DADF"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/generate_history_pdf"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@color/purple_700"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            android:background="#D6DADF">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="8dp"
                android:text="@string/start_date"
                android:textSize="10dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/end_date"
                android:textSize="10dp"
                android:layout_marginRight="2dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/history_from_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/white_detailsbg"
                android:paddingLeft="7dp"
                android:paddingTop="8dp"

                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:foreground="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/white_detailsbg"
                android:paddingLeft="7dp"
                android:paddingTop="8dp"

                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:id="@+id/history_end_date"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="8dp"
            android:text="HISTORY PDF DATE RANGE IS MAXIMUM 21 DAYS"
            android:textSize="10dp"
            android:layout_marginTop="4dp"
            android:id="@+id/history_keeping_date"/>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="2dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:text="@string/cancel"
                android:textSize="15dp"
                android:textColor="#FF0000"
                android:textAlignment="center"
                android:background="@drawable/graycolor_bg"
                android:id="@+id/history_pdf_cancel"
                android:foreground="?android:attr/selectableItemBackground"/>
            <Button
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/share_pdf"
                android:textColor="@color/white"
                android:background="@drawable/green_color_bg"
                android:id="@+id/history_generate_pdf"
                android:foreground="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
